force-app/main/default/objects/Customer__c/fields/Customer_Nick_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Nick_Name__c</fullName>
    <label>Customer Nick Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>