force-app/main/default/objects/Customer__c/fields/is_Premium_Customer__c.field-meta.xml
<CustomField>
    <fullName>is_Premium_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Premium Customer?</label>
    <type>Checkbox</type>
</CustomField>